# household-fire-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
docs/: product-spec.md
household_fire_lens/: __init__.py  aggregation.py  classifier.py  cli.py  database.py  entity_resolver.py  importer.py  parsers.py  server.py
tests/: test_domain.py
tests/fixtures/: remediation-golden.csv  synthetic-main.csv
web/: app.js  index.html  styles.css
